--- a/src/main/java/br/eti/carloslima/clinformatica/gui/FuncionarioPage.form
+++ b/src/main/java/br/eti/carloslima/clinformatica/gui/FuncionarioPage.form
@@ -73,9 +73,9 @@
               <EmptySpace pref="111" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
                   <Component id="btnSalvar" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="btnBusca" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnLimpa" alignment="2" min="-2" max="-2" attributes="0"/>
                   <Component id="btnEditar" alignment="2" min="-2" max="-2" attributes="0"/>
-                  <Component id="bntDeleta" alignment="2" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnDeleta" alignment="2" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="227" max="-2" attributes="0"/>
           </Group>
@@ -113,9 +113,9 @@
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="btnEditar" max="32767" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="btnBusca" max="32767" attributes="0"/>
+              <Component id="btnLimpa" max="32767" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="bntDeleta" max="32767" attributes="0"/>
+              <Component id="btnDeleta" max="32767" attributes="0"/>
               <EmptySpace min="-2" pref="92" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="237" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="59" max="-2" attributes="0"/>
@@ -209,7 +209,11 @@
     <Component class="javax.swing.JButton" name="btnEditar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Editar"/>
+        <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnSalvar">
       <Properties>
@@ -219,17 +223,21 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSalvarActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="btnBusca">
+    <Component class="javax.swing.JButton" name="btnLimpa">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Busca"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="bntDeleta">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Deleta"/>
+        <Property name="text" type="java.lang.String" value="Limpar"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntDeletaActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLimpaActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnDeleta">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Deleta"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDeletaActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
@@ -285,6 +293,9 @@
               <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tabelaMouseClicked"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="tabela = new javax.swing.JTable(){&#xa;    public boolean isCellEditable(int rowIndex, int colIndex){&#xa;        return false;&#xa;    }&#xa;};"/>
           </AuxValues>
