--- a/src/main/java/br/eti/carloslima/clinformatica/gui/MainPage.form
+++ b/src/main/java/br/eti/carloslima/clinformatica/gui/MainPage.form
@@ -18,7 +18,6 @@
                   <Image iconType="3" name="/images/icon-user.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Funcionarios"/>
-                <Property name="actionCommand" type="java.lang.String" value="Funcionarios"/>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
@@ -40,6 +39,20 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniClienteActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="mmiOrdem">
+              <Properties>
+                <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
+                  <KeyStroke key="Alt+O"/>
+                </Property>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/images/document.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Ordem de Ser."/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mmiOrdemActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
