busca do produto na base de dados

--- a/src/main/java/br/eti/carloslima/clinformatica/gui/ServiceOrderScreen.form
+++ b/src/main/java/br/eti/carloslima/clinformatica/gui/ServiceOrderScreen.form
@@ -553,7 +553,7 @@
                               <Component id="jScrollPane4" min="-2" pref="896" max="-2" attributes="0"/>
                               <Component id="jLabel14" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="10" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
@@ -598,6 +598,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="1"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtEanKeyPressed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel13">
                   <Properties>
